--- a/styles/application.scss
+++ b/styles/application.scss
@@ -12,6 +12,10 @@ body, html {
   height: 100%;
 }
 
+@mixin margin-bottom($number, $leading) {
+  margin-bottom: #{$number * $leading + 'rem'};
+}
+
 section {
   @include outer-container;
   @include pad();
@@ -41,9 +45,8 @@ section {
   @include justify-content(center);
 }
 
-.content {
-  padding-top: 60px;
-  min-height: 100%;
+.flex-wrap {
+  @include flex-wrap(wrap);
 }
 
 .content-panel {
@@ -58,8 +61,13 @@ section {
       @include span-columns(6);
     }
 
+    h1 {
+      @include margin-bottom(3, $heading-line-height);
+    }
+
     h2 {
-      font-size: 2rem;
+      font-size: 2.2rem;
+      @include margin-bottom(1, $heading-line-height);
 
       span {
         color: $red;
@@ -77,7 +85,8 @@ section {
   i {
     display: inline-block;
     transform: rotate(-10deg);
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    font-weight: bold;
   }
 }
 
