--- a/styles/application.scss
+++ b/styles/application.scss
@@ -16,6 +16,15 @@ body, html {
   margin-bottom: #{$number * $leading + 'rem'};
 }
 
+@mixin font-size($number, $leading) {
+  font-size: #{$number * $leading + 'rem'};
+}
+
+h1, h2 {
+  font-weight: normal;
+  @include font-size(2, $heading-line-height);
+}
+
 section {
   @include outer-container;
   @include pad();
@@ -53,40 +62,54 @@ section {
   background-color: $panel-color;
 }
 
+#heading-container {
+  position: relative;
+}
+
+#drawing {
+  @include media($x-large-screen) {
+    position: absolute;
+  }
+  display: block;
+  width: 55rem;
+  bottom: 0;
+  margin-bottom: -0.55rem;
+}
+
 #heading {
   text-align: center;
+  font-family: $heading-font-family;
 
   .title {
+    margin-top: #{2.5 * $heading-line-height + 'rem'};
     @include media($large-screen) {
       @include span-columns(6);
     }
 
     h1 {
-      @include margin-bottom(3, $heading-line-height);
+      @include font-size(2, $heading-line-height);
+      @include margin-bottom(2.8, $heading-line-height);
     }
 
     h2 {
-      font-size: 2.2rem;
+      @include font-size(3.5, $heading-line-height);
       @include margin-bottom(1, $heading-line-height);
-
+      
       span {
         color: $red;
       }
     }
   }
 
-  .about {
+  .jumbo {
+    margin: 5rem auto;
+    @include font-size(2, $heading-line-height);
     @include media($large-screen) {
-      @include shift(2);
-      @include span-columns(4);
+      @include span-columns(6);
     }
-  }
-
-  i {
-    display: inline-block;
-    transform: rotate(-10deg);
-    font-size: 1.7rem;
-    font-weight: bold;
+    @include media($x-large-screen) {
+      margin: 10rem auto;
+    }
   }
 }
 
@@ -106,6 +129,18 @@ section {
 }
 
 #contact {
+  
+  .contacts {    
+    @include media($large-screen) {
+      @include span-columns(5);
+    }
+  }
+  
+  .about {    
+    @include media($large-screen) {
+      @include span-columns(7);
+    }
+  }
 
   img {
     margin-right: 1rem;
@@ -118,5 +153,8 @@ section {
 
   a {
     @extend .button;
+    font-family: $heading-font-family;
+    @include font-size(1.5, $heading-line-height);
+    color: $base-font-color;
   }
 }
