--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -1,13 +1,14 @@
 // Breakpoints
 $medium-screen: 600px;
 $large-screen: 900px;
+$x-large-screen: 1100px;
 
 // Typography
 $base-font-family: $font-stack-system;
-$heading-font-family: $base-font-family;
+$heading-font-family: 'Amatic SC', cursive;
 
 // Font Sizes
-$base-font-size: 1.1em;
+$base-font-size: 1.3em;
 
 // Line height
 $base-line-height: 1.5;
@@ -27,7 +28,7 @@ $light-gray: #ddd;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: #fff;
 
 // Border
 $base-border-color: $light-gray;
