New icons in contact section

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -134,6 +134,18 @@ section {
     @include media($large-screen) {
       @include span-columns(5);
     }
+    
+    
+    a {
+      color: $base-font-color;
+      @include transition(all 0.3s ease-in-out);
+      
+      &:active,
+      &:focus,
+      &:hover {
+        opacity: 0.6;
+      }
+    }
   }
   
   .about {    
