--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -28,7 +28,7 @@ $light-gray: #ddd;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: #fff;
+$action-color: $dark-gray;
 
 // Border
 $base-border-color: $light-gray;
