--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -6,15 +6,13 @@
   $large-screen: em(860) !default;
   $footer-background: $panel-color;
   $footer-color: $medium-gray;
-  $footer-link-color: transparentize($footer-color, 0.6);
-  $footer-disclaimer-color: transparentize($footer-color, 0.6);
+  $footer-link-color: darken($footer-color, 20%);
+  $footer-disclaimer-color: darken($footer-color, 20%);
 
-  color: $footer-link-color;
-  background: $footer-background;
   padding: $base-spacing;
   width: 100%;
   display: inline-block;
-  
+
   font-size: 0.8em;
 
   .footer-content {
