--- a/styles/application.scss
+++ b/styles/application.scss
@@ -81,6 +81,7 @@ section {
   li {
     width: 16rem;
     display: block;
+    line-height: 1.2;
     @include pad(0.50rem);
     margin: 1rem;
     border: 2.5px solid #FCE054;
@@ -189,6 +190,12 @@ section {
 
 #mail {
   padding-top: 0;
+}
+
+.horizontal-line {
+  display: block;
+  max-width: 25vw;
+  margin: 3rem auto;
 }
 
 .hire-me {
