Barva ze žluté na červenou

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -84,7 +84,7 @@ section {
     line-height: 1.2;
     @include pad(0.50rem);
     margin: 1rem;
-    border: 2.5px solid #FCE054;
+    border: 2.5px solid #C929294;
   }
 }
 
